# keyloop

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  adaptar_snippet.py  docker-compose.yml  keyloop.dev  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
ext/utils/: singletonmethod.py
grip/: __init__.py  context.py  decorator.py  decorators.py  models.py  pagination.py  renderers.py  resource.py
keyloop/: __init__.py  interfaces.py  security.py  services.py
keyloop/api/: __init__.py
keyloop/api/v1/: __init__.py  auth_session.py  exceptions.py  exeptions.py  identity.py  permission-grant.py  permission.py  permission_grant.py  realms.py
keyloop/command/: main.py
keyloop/ext/sqla/: __init__.py  auth_session.py  identity.py  models.py  permission.py
keyloop/ext/utils/: decorators.py  singletonmethod.py
keyloop/interfaces/: auth_session.py  identity.py  permission.py  permission_grant.py
keyloop/models/: __init__.py  auth_session.py  base.py  identity.py
keyloop/schemas/: auth_session.py  error.py  identity.py  path.py  permission.py
keyloop/utils/: pagination.py
playground/: __init__.py  development.ini  main.py  manage.py  models.py  setup.py
playground/models/: user.py
playground/tests/: pyresttest_api_scenarios.yaml  pyresttest_api_scenarios2.yaml
tests/: conftest.py  factories.py  fake_auth_session.py  fake_permission.py  fake_user.py  locust.py
tests/ext/: test_utils.py
tests/load/: login_logout.py
tests/test_authentication/: test_policy.py
tests/test_models/: test_realm_model.py
(+10 files in other folders)
