[tool.poetry]
name = "keyloop"
version = "0.0.1"
description = "Key Loop - Authorization Server."
authors = ["Geru <tecnologia@geru.com.br>"]

[[tool.poetry.source]]
name = "geru-pypi"
url = "https://geru-pypi.geru.com.br/simple"

[tool.poetry.dependencies]
python = "^3.7"
arrow = "^0.15.5"
pyramid = "^1.10"
gunicorn = "^20.0"
marshmallow-enum = "^1.5"
cornice = "^4.0"
SQLAlchemy = "^1.3"
"zope.sqlalchemy" = "^1.3"
SQLAlchemy-Utils = "^0.36.3"
pyramid-ipython = "^0.2.0"
alembic = "^1.4"
cornice-apispec = "0.9.3"
click = "^7.1"
cryptacular = "^1.5"
sqlalchemy-pagination = "^0.0.2"
marshmallow = "2.19.5"
marshmallow-jsonapi = "0.23.0"
pyramid-tm = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-cov = "^2.8"
WebTest = "^2.0"
freezegun = "^0.3.15"
factory-boy = "^2.12"
pyresttest = "^1.7"
locust = "^0.0.0"
locustio = "^0.14.5"


